使用jquery插件重构

--- a/text-image-color-background.html
+++ b/text-image-color-background.html
@@ -39,9 +39,9 @@
 		<!-- Global overlay -->
 		<div class="global-overlay">
 			<div class="overlay-inner bg-image-holder bg-cover">
-				<img src="demo/images/image-1.jpg" alt="">
+				<img src="demo/images/image-13.jpg" alt="">
 			</div>
-			<div class="overlay-inner bg-dark opacity-80"></div>
+			<div class="overlay-inner bg-primary opacity-85"></div>
 		</div>
 
 		<!-- Site header -->
@@ -91,7 +91,7 @@
 									<h1 class="text-white mb-3 animated" data-animation="fadeInUp">We bulid beautiful digital experiences.</h1>
 									<p class="lead text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Everything, what we create – from design, code or advertising it’s building a solid brand.</p>
 									<a href="#about" class="btn btn-white scrollto animated" data-animation="fadeInUp" data-animation-delay="400">Learn more</a>
-									<a href="#subscribe" class="btn btn-primary scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
+									<a href="#subscribe" class="btn btn-dark scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
 								</div>
 							</div>
 						</div>
@@ -127,7 +127,7 @@
 												</div>
 
 												<div class="col-12 col-md-3">
-													<button class="btn btn-primary btn-block" type="submit" id="sf-submit" name="sf-submit">Notify Me</button>
+													<button class="btn btn-dark btn-block" type="submit" id="sf-submit" name="sf-submit">Notify Me</button>
 												</div>
 
 											</div>
@@ -171,7 +171,7 @@
 
 								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="600">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-timer"></i>
 											</div>
@@ -183,7 +183,7 @@
 
 								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="800">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-brush-alt"></i>
 											</div>
@@ -195,7 +195,7 @@
 
 								<div class="col-12 col-lg-4">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="1000">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-book"></i>
 											</div>
@@ -253,7 +253,7 @@
 												</div>
 
 												<div class="col-12 text-center">
-													<button class="btn btn-primary" type="submit" id="cf-submit" name="cf-submit">Send Message</button>
+													<button class="btn btn-dark" type="submit" id="cf-submit" name="cf-submit">Send Message</button>
 												</div>
 
 											</div>
