--- a/text-slideshow-zoom-background.html
+++ b/text-slideshow-zoom-background.html
@@ -28,7 +28,7 @@
 		<script src="assets/js/modernizr-custom.js"></script>
 
 	</head>
-	<body>
+	<body class="slideshow-zoom-background">
 
 		<div id="preloader" class="preloader">
 			<div class="loader-status">
@@ -38,9 +38,6 @@
 
 		<!-- Global overlay -->
 		<div class="global-overlay">
-			<div class="overlay-inner bg-image-holder bg-cover">
-				<img src="demo/images/image-1.jpg" alt="">
-			</div>
 			<div class="overlay-inner bg-dark opacity-80"></div>
 		</div>
 
