--- a/text-youtube-background.html
+++ b/text-youtube-background.html
@@ -39,9 +39,11 @@
 		<!-- Global overlay -->
 		<div class="global-overlay">
 			<div class="overlay-inner bg-image-holder bg-cover">
-				<img src="demo/images/image-1.jpg" alt="">
+				<img src="demo/images/image-4.jpg" alt="background">
 			</div>
-			<div class="overlay-inner bg-dark opacity-80"></div>
+			<a class="player"></a>
+			<div id="youtube-background" class="overlay-inner overlay-video"></div>
+			<div class="overlay-inner bg-dark opacity-55"></div>
 		</div>
 
 		<!-- Site header -->
