--- a/countdown-animated-gradient-background.html
+++ b/countdown-animated-gradient-background.html
@@ -38,10 +38,7 @@
 
 		<!-- Global overlay -->
 		<div class="global-overlay">
-			<div class="overlay-inner bg-image-holder bg-cover">
-				<img src="demo/images/image-1.jpg" alt="">
-			</div>
-			<div class="overlay-inner bg-dark opacity-80"></div>
+			<div class="overlay-inner" data-gradient-bg="[['#21D4FD','#B721FF'],['#2a27db','#2754db'],['#2f46e4','#39cccc']]"></div>
 		</div>
 
 		<!-- Site header -->
@@ -85,11 +82,11 @@
 
 				<div class="site-part" id="home">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center text-white text-center">
 							<div class="row">
-								<div class="col-12 col-lg-10 mx-lg-auto text-center">
-									<h1 class="text-white mb-3 animated" data-animation="fadeInUp">We bulid beautiful digital experiences.</h1>
-									<p class="lead text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Everything, what we create – from design, code or advertising it’s building a solid brand.</p>
+								<div class="col-12 col-lg-10 mx-lg-auto">
+									<div class="countdown mx-auto mb-4 animated" data-animation="fadeInUp" data-countdown="2022/5/13 12:00:00"></div>
+									<h3 class="mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Our website is under construction. We`ll be here soon with our new awesome site, subscribe to be notified.</h3>
 									<a href="#about" class="btn btn-white scrollto animated" data-animation="fadeInUp" data-animation-delay="400">Learn more</a>
 									<a href="#subscribe" class="btn btn-primary scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
 								</div>
@@ -127,7 +124,7 @@
 												</div>
 
 												<div class="col-12 col-md-3">
-													<button class="btn btn-primary btn-block" type="submit" id="sf-submit" name="sf-submit">Notify Me</button>
+													<button class="btn btn-dark btn-block" type="submit" id="sf-submit" name="sf-submit">Notify Me</button>
 												</div>
 
 											</div>
@@ -171,7 +168,7 @@
 
 								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="600">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-timer"></i>
 											</div>
@@ -183,7 +180,7 @@
 
 								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="800">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-brush-alt"></i>
 											</div>
@@ -195,7 +192,7 @@
 
 								<div class="col-12 col-lg-4">
 									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="1000">
-										<div class="feature-icon text-primary mb-3">
+										<div class="feature-icon mb-3">
 											<div>
 												<i class="ti-book"></i>
 											</div>
@@ -253,7 +250,7 @@
 												</div>
 
 												<div class="col-12 text-center">
-													<button class="btn btn-primary" type="submit" id="cf-submit" name="cf-submit">Send Message</button>
+													<button class="btn btn-dark" type="submit" id="cf-submit" name="cf-submit">Send Message</button>
 												</div>
 
 											</div>
