--- a/countdown-image-background.html
+++ b/countdown-image-background.html
@@ -85,11 +85,11 @@
 
 				<div class="site-part" id="home">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center text-white text-center">
 							<div class="row">
-								<div class="col-12 col-lg-10 mx-lg-auto text-center">
-									<h1 class="text-white mb-3 animated" data-animation="fadeInUp">We bulid beautiful digital experiences.</h1>
-									<p class="lead text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Everything, what we create – from design, code or advertising it’s building a solid brand.</p>
+								<div class="col-12 col-lg-10 mx-lg-auto">
+									<div class="countdown mx-auto mb-4 animated" data-animation="fadeInUp" data-countdown="2022/5/13 12:00:00"></div>
+									<h3 class="mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Our website is under construction. We`ll be here soon with our new awesome site, subscribe to be notified.</h3>
 									<a href="#about" class="btn btn-white scrollto animated" data-animation="fadeInUp" data-animation-delay="400">Learn more</a>
 									<a href="#subscribe" class="btn btn-primary scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
 								</div>
