--- a/countdown-white-background.html
+++ b/countdown-white-background.html
@@ -36,20 +36,13 @@
 			</div>
 		</div>
 
-		<!-- Global overlay -->
-		<div class="global-overlay">
-			<div class="overlay-inner bg-image-holder bg-cover">
-				<img src="demo/images/image-1.jpg" alt="">
-			</div>
-			<div class="overlay-inner bg-dark opacity-80"></div>
-		</div>
-
 		<!-- Site header -->
-		<header class="site-header header-mobile-dark header-content-light header-content-mobile-light">
+		<header class="site-header header-mobile-dark header-content-dark header-content-mobile-light">
 			<div class="header-brand">
 				<!-- Logo -->
 				<a class="logo" href="#">
-					<img src="assets/images/logo.png" alt="">
+					<img src="assets/images/logo.png" class="logo-light" alt="">
+					<img src="assets/images/logo-dark.png" class="logo-dark" alt="">
 				</a>
 				<button type="button" id="navigation-toggle" class="nav-toggle">
 					<span></span>
@@ -85,13 +78,13 @@
 
 				<div class="site-part" id="home">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center text-center">
 							<div class="row">
-								<div class="col-12 col-lg-10 mx-lg-auto text-center">
-									<h1 class="text-white mb-3 animated" data-animation="fadeInUp">We bulid beautiful digital experiences.</h1>
-									<p class="lead text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Everything, what we create – from design, code or advertising it’s building a solid brand.</p>
-									<a href="#about" class="btn btn-white scrollto animated" data-animation="fadeInUp" data-animation-delay="400">Learn more</a>
-									<a href="#subscribe" class="btn btn-primary scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
+								<div class="col-12 col-lg-10 mx-lg-auto">
+									<div class="countdown mx-auto mb-4 animated" data-animation="fadeInUp" data-countdown="2022/5/13 12:00:00"></div>
+									<h3 class="mb-5 animated" data-animation="fadeInUp" data-animation-delay="200">Our website is under construction. We`ll be here soon with our new awesome site, subscribe to be notified.</h3>
+									<a href="#about" class="btn btn-primary scrollto animated" data-animation="fadeInUp" data-animation-delay="400">Learn more</a>
+									<a href="#subscribe" class="btn btn-light scrollto animated" data-animation="fadeInUp" data-animation-delay="600">Subscribe</a>
 								</div>
 							</div>
 						</div>
@@ -100,11 +93,11 @@
 
 				<div class="site-part" id="subscribe">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center">
 							<div class="row mb-5 text-center">
 								<div class="col-12 col-lg-9 mx-lg-auto">
 									<h2 class="h1 mb-4 animated" data-animation="fadeInUp">Subscribe To Our Newsletter</h2>
-									<div class="divider animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
+									<div class="divider divider-dark animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
 									<p class="animated" data-animation="fadeInUp" data-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 								</div>
 							</div>
@@ -117,7 +110,7 @@
 												<div class="form-process"></div>
 
 												<div class="col-12 col-md-9">
-													<div class="form-group text-white">
+													<div class="form-group">
 														<input type="email" id="sf-email" name="sf-email" placeholder="Enter Your Email Address" class="form-control required">
 													</div>
 												</div>
@@ -142,11 +135,11 @@
 
 				<div class="site-part" id="about">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center">
 							<div class="row">
 								<div class="col-12 col-lg-10 mx-lg-auto text-center">
 									<h2 class="h1 mb-4 animated" data-animation="fadeInUp">About Us</h2>
-									<div class="divider animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
+									<div class="divider divider-dark animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
 									<div class="animated" data-animation="fadeInUp" data-animation-delay="400">
 										<p>Pellentesque commodo vehicula turpis, suscipit suscipit libero mollis vitae. Ut imperdiet leo in neque interdum efficitur. Nullam non gravida lectus, sit amet cursus sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed varius ex sed nisl congue rhoncus. Vestibulum vitae nibh vitae ante pretium efficitur ac vitae nunc. Quisque a imperdiet nulla. Fusce et leo blandit, venenatis libero vitae, fermentum lacus. Integer maximus et arcu vitae scelerisque. Proin molestie pretium nunc, id rutrum nisi tempus commodo. Sed laoreet, mi in facilisis dictum, lacus purus cursus mi, ut condimentum sem justo ac enim. Nulla at magna lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas condimentum a massa ut tincidunt.</p>
 										<p>Ut hendrerit arcu sed aliquet facilisis. Donec mollis ullamcorper sagittis. Praesent cursus magna ligula, molestie sagittis ligula elementum vitae. Sed a lacus enim. Phasellus sed faucibus quam. Duis et sodales felis. Cras luctus sapien vitae fringilla suscipit. In blandit aliquet pharetra. Quisque eleifend, metus sit amet sagittis pulvinar, dui orci egestas ipsum, a tincidunt mi felis rhoncus ante. Aliquam egestas imperdiet nibh, vel aliquet odio faucibus et. Praesent imperdiet commodo rutrum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
@@ -159,18 +152,18 @@
 
 				<div class="site-part" id="services">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center">
 							<div class="row mb-5 text-center">
 								<div class="col-12 col-lg-9 mx-lg-auto">
 									<h2 class="h1 mb-4 animated" data-animation="fadeInUp">Services</h2>
-									<div class="divider animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
+									<div class="divider divider-dark animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
 									<p class="animated" data-animation="fadeInUp" data-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 								</div>
 							</div>
-							<div class="row">
+							<div class="row mb--n15 mt-md--n15">
 
-								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
-									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="600">
+								<div class="col-12 col-md-6 col-xl-4 pb--15 pt-md--15">
+									<div class="feature-block feature-boxed animated" data-animation="fadeInUp" data-animation-delay="600">
 										<div class="feature-icon text-primary mb-3">
 											<div>
 												<i class="ti-timer"></i>
@@ -181,8 +174,8 @@
 									</div>
 								</div>
 
-								<div class="col-12 col-lg-4 mb-5 mb-lg-0">
-									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="800">
+								<div class="col-12 col-md-6 col-xl-4 pb--15 pt-md--15">
+									<div class="feature-block feature-boxed animated" data-animation="fadeInUp" data-animation-delay="800">
 										<div class="feature-icon text-primary mb-3">
 											<div>
 												<i class="ti-brush-alt"></i>
@@ -193,8 +186,8 @@
 									</div>
 								</div>
 
-								<div class="col-12 col-lg-4">
-									<div class="feature-block animated" data-animation="fadeInUp" data-animation-delay="1000">
+								<div class="col-12 col-md-6 col-xl-4 pb--15 pt-md--15">
+									<div class="feature-block feature-boxed animated" data-animation="fadeInUp" data-animation-delay="1000">
 										<div class="feature-icon text-primary mb-3">
 											<div>
 												<i class="ti-book"></i>
@@ -212,11 +205,11 @@
 
 				<div class="site-part" id="contact">
 					<section class="fullscreen d-flex">
-						<div class="container align-self-center text-white">
+						<div class="container align-self-center">
 							<div class="row text-center">
 								<div class="col-12 col-lg-9 mx-lg-auto">
 									<h2 class="h1 mb-4 animated" data-animation="fadeInUp">Contact Us</h2>
-									<div class="divider animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
+									<div class="divider divider-dark animated" data-animation="fadeInUp" data-animation-delay="200"><span></span></div>
 									<p class="animated mb-5" data-animation="fadeInUp" data-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 									<div class="contact-form text-left animated" data-animation="fadeInUp" data-animation-delay="600">
 										<form class="mb-0" id="cf" name="cf" action="include/sendemail.php" method="post" autocomplete="off">
@@ -225,25 +218,25 @@
 												<div class="form-process"></div>
 
 												<div class="col-12 col-md-6">
-													<div class="form-group error-text-white">
+													<div class="form-group">
 														<input type="text" id="cf-name" name="cf-name" placeholder="Enter your name" class="form-control required">
 													</div>
 												</div>
 
 												<div class="col-12 col-md-6">
-													<div class="form-group error-text-white">
+													<div class="form-group">
 														<input type="email" id="cf-email" name="cf-email" placeholder="Enter your email address" class="form-control required">
 													</div>
 												</div>
 
 												<div class="col-12">
-													<div class="form-group error-text-white">
+													<div class="form-group">
 														<input type="text" id="cf-subject" name="cf-subject" placeholder="Subject (Optional)" class="form-control">
 													</div>
 												</div>
 
 												<div class="col-12 mb-4">
-													<div class="form-group error-text-white">
+													<div class="form-group">
 														<textarea name="cf-message" id="cf-message" placeholder="Here goes your message" class="form-control required" rows="7"></textarea>
 													</div>
 												</div>
@@ -270,9 +263,9 @@
 		</div>
 
 		<!-- Site footer -->
-		<footer class="site-footer footer-content-light footer-mobile-content-light">
+		<footer class="site-footer footer-content-dark footer-mobile-content-light">
 			<div class="overlay">
-				<div class="overlay-inner bg-white"></div>
+				<div class="overlay-inner bg-light"></div>
 			</div>
 			<div class="container socials-container">
 				<nav class="socials-icons">
